syntax = "proto3";

package helloworld;

option go_package = "github.com/jun06t/grpc-sample/bazel/proto;helloworld";

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
